# small-tools

./: Cargo.toml  README.adoc  build.rs
.github/workflows/: rust-head.yaml
amazon-beancount/: Cargo.toml
amazon-beancount/.github/workflows/: rust-head.yaml
amazon-beancount/src/: main.rs  order_record.rs
battle-net-auth/: Cargo.toml
battle-net-auth/src/: auth.rs  main.rs
mem-layout-diagram/: Cargo.toml  README.adoc  example.mld
mem-layout-diagram/src/: geometry.rs  main.rs
rust-ebuild-gen/: Cargo.toml  README.adoc
rust-ebuild-gen/src/: error.rs  main.rs
src/: auth.rs  config.rs  draw.rs  error.rs  graph.rs  layout.rs  main.rs  order_record.rs  svg.rs  telegram.rs
telegram-bot-controller/: Cargo.toml  README.adoc  telegram-bot-control-example.toml
telegram-bot-controller/src/: config.rs  main.rs  telegram.rs
triangulation/: Cargo.toml
triangulation/src/: bin.rs  lib.rs
triangulation/triangulation/: Cargo.toml
triangulation/triangulation/src/: geometry.rs  lib.rs  triangulation.rs  voronoi.rs
triangulation/voronoi_img/: Cargo.toml
triangulation/voronoi_img/src/: lib.rs
triangulation/voronoi_img_bin/: Cargo.toml
triangulation/voronoi_img_bin/src/: main.rs
