[package]
name = "battle-net-auth"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = ">=0.3"
rand = { version = ">=0.7", std = true }
reqwest = { version = ">=0.10", features = ["blocking"] }
