[package]
name = "battle-net-auth"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = ">=0.3"
num-traits = ">=0.2"
num-integer = ">=0.1"
rand = { version = ">=0.7", std = true }
reqwest = { version = ">=0.10", features = ["blocking"] }
data-encoding = ">=2.3"
qrcode = ">=0.12"
image = ">=0.23"
clap = ">=2.33"
