[package]
name = "telegram-notify-bot"
version = "0.1.1"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", branch = "main"}
serde = { version = ">=1.0", features = ["derive"] }
clap = ">=4"
toml = ">=0.5"
log = ">=0.4"
tokio = { version = ">=1.6", features = ["macros", "rt", "rt-multi-thread"] }
futures = ">=0.3"
async-trait = ">=0.1"
stderrlog = ">=0.4"
